fixing css on mobile and removing post

--- a/nuxt-app/assets/main.scss
+++ b/nuxt-app/assets/main.scss
@@ -3,8 +3,20 @@
   margin-right: auto;
 }
 
+.screen-width {
+  width: 100vw;
+}
+
 .max-w {
   max-width: 40rem;
+}
+
+.w-screen {
+  width: 100%;
+}
+
+.flex-wrap {
+  flex-wrap: wrap;
 }
 
 .max-w-large {
